# WayfairFlatMakerByDK

./: .gitignore  Makefile  README.md  data_shaper.py  excel_writer.py  i18n.py  main.py  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  builder.py  constants.py  controls.py  flat_maker.py  gemini.py  helpers.py  messages.py  settings.py  submission.py  ui_ops.py  validation.py  version.py  wayfair_flat_maker.py
assets/: decal_template.xlsx  template.xlsx  wallpaper_template.xlsx
data/: __init__.py  base_shaper.py  data_shaper.py  decal_shaper.py  excel_writer.py  factory.py  models.py  pricing.py  wallpaper_shaper.py
i18n/: __init__.py  translator.py
locales/: app.pot
locales/ru/LC_MESSAGES/: app.mo  app.po
locales/sq/LC_MESSAGES/: app.mo  app.po
locales/uk/LC_MESSAGES/: app.mo  app.po
