[project]
name = "wayfairflatmakerbydk"
version = "0.1.0"
description = "This software is designed to quickly generate a spreadsheet for uploading listings to Wayfair. This is a commercial project for a company that prints various products such as decals, wallpaper, stickers, etc, the source code is published with their permission. You can customize the project for your type of product. You can download the table template in your Wayfair personal account, Product Management->Add Products->Composite SKUs tab. After selecting your brand and product category and download a blank template."
authors = [
    {name = "FunkyDrama",email = "cripswhigga18@gmail.com"}
]
license = {text = "No License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog (==4.0.0)",
    "flet[all] (==0.81.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "babel (>=2.18.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.flet]
product = "Wayfair Flat Maker by Daniel K"
artifact = "WayfairFlatMakerByDK"
company = "Daniel Kravchenko"
copyright = "Copyright (C) 2026 Daniel Kravchenko"
org = "com.funkydrama"
bundle_id = "com.funkydrama.wayfairflatmakerbydk"
build_number = 1

[tool.flet.app]
path = "."
module = "main.py"
exclude = [".git", ".idea", ".venv", "build"]

[tool.flet.app.startup_screen]
show = true
message = "Starting Wayfair Flat Maker..."

[tool.flet.macos]
target_arch = ["arm64", "x86_64"]

[tool.flet.windows]
artifact = "WayfairFlatMakerByDK"
